fix: hover on mobile

--- a/index.less
+++ b/index.less
@@ -350,13 +350,14 @@ html,body {
         height: 21rem;
         margin-left: 0.2rem;
         margin-right: 0.2rem;
-    }
-    .card:hover {
-        height: 18.3rem;
-        padding: 0.15rem;
-        margin: 0.60rem;
-        margin-left: 0.05rem;
-        margin-right: 0.05rem;
+
+        &:hover {
+            height: 21.5rem;
+            padding: 0.25rem;
+            margin: 0.5rem;
+            margin-left: 0.05rem;
+            margin-right: 0.05rem;
+        }
     }
     .card-title {
         font-size: 2rem;
